styles.css
:root {
    --background-color-light: #2B2D42;
    --background-color-dark: #000000;
    --main-color-light: aliceblue;
    --highlight-color: #DE4D86;
    --text-color: var(--main-color-light);
}

body {
    font-family: Arial, Helvetica, sans-serif;
    position:relative;
    text-align:center;
    margin-left: 20%;
    margin-right: 20%;
    color: var(--text-color);
    background-color: var(--background-color-light);
}

input[type='radio'] {
    appearance:none;
    
    border-radius: 50%;
    width: 16px;
    height: 16px;

    border: 2px solid #999;
    transition: 0.05s all linear;
    margin-right: 5px;

    position: relative;
    top: 4px;
}

input[type='radio']:checked {
    border: 4px solid var(--highlight-color);
}

input[type=range] {
    height: 20px;
    -webkit-appearance: none;
    background:rgba(0,0,0,0);
  }
  input[type=range]:focus {
    outline: none;
  }
  input[type=range]::-webkit-slider-runnable-track {
    height: 8px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 1px 1px 1px #50555C;
    background: #F0F8FF;
    border-radius: 14px;
    border: 0px solid #000000;
  }
  input[type=range]::-webkit-slider-thumb {
    box-shadow: 0px 0px 0px #000000;
    border: 4px solid #DE4D86;
    height: 10px;
    width: 19px;
    border-radius: 13px;
    background: #2B2D42;
    cursor: pointer;
    -webkit-appearance: none;
    margin-top: -3px;
  }
  input[type=range]:focus::-webkit-slider-runnable-track {
    background: #F0F8FF;
  }
  input[type=range]::-moz-range-track {
    height: 8px;
    cursor: pointer;
    animate: 0.2s;
    box-shadow: 1px 1px 1px #50555C;
    background: #F0F8FF;
    border-radius: 14px;
    border: 0px solid #000000;
  }
  input[type=range]::-moz-range-thumb {
    box-shadow: 0px 0px 0px #000000;
    border: 4px solid #DE4D86;
    height: 10px;
    width: 19px;
    border-radius: 13px;
    background: #2B2D42;
    cursor: pointer;
  }
  input[type=range]::-ms-track {
    height: 8px;
    cursor: pointer;
    animate: 0.2s;
    background: transparent;
    border-color: transparent;
    color: transparent;
  }
  input[type=range]::-ms-fill-lower {
    background: #F0F8FF;
    border: 0px solid #000000;
    border-radius: 28px;
    box-shadow: 1px 1px 1px #50555C;
  }
  input[type=range]::-ms-fill-upper {
    background: #F0F8FF;
    border: 0px solid #000000;
    border-radius: 28px;
    box-shadow: 1px 1px 1px #50555C;
  }
  input[type=range]::-ms-thumb {
    margin-top: 1px;
    box-shadow: 0px 0px 0px #000000;
    border: 4px solid #DE4D86;
    height: 10px;
    width: 19px;
    border-radius: 13px;
    background: #2B2D42;
    cursor: pointer;
  }
  input[type=range]:focus::-ms-fill-lower {
    background: #F0F8FF;
  }
  input[type=range]:focus::-ms-fill-upper {
    background: #F0F8FF;
  }
  
  
  

